convert syntax to yaml

--- a/templates/local_settings.py.j2
+++ b/templates/local_settings.py.j2
@@ -30,7 +30,7 @@ DEBUG = {{ graphite_debug }}
 
 {% if graphite_memcache_hosts is defined %}
 MEMCACHE_HOSTS = {{ graphite_memcache_hosts }}
-{{% else %}}
+{% else %}
 MEMCACHE_HOSTS = []
 {% endif %}
 
